--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "buffer": "^4.6.0",
+    "lodash": "^4.13.1",
     "react": "^15.1.0",
     "react-native": "0.27.2"
   }
