--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "buffer": "^4.6.0",
     "lodash": "^4.13.1",
+    "moment": "^2.14.1",
     "react": "^15.1.0",
     "react-native": "0.27.2"
   }
